--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -143,3 +143,13 @@ input[type="submit"] {
     color: #999;
     font-family: 'Open Sans', sans-serif;
 }
+.newComment {
+  padding-top: 20px;
+  padding-left: 10px;
+  padding-bottom: 20px;
+}
+.comment {
+  border-style: solid;
+  border-width: 1px;
+  padding: 10px;
+}
