--- a/src/main/resources/templates/viewpost.html
+++ b/src/main/resources/templates/viewpost.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <div class="banner">
-    <img src="/images/blog.jpeg">
-    <span  th:text ="#{index.title}"/>
-    </img>
-
+    <a href="/">
+        <img src="/images/blog.jpeg">
+            <span  th:text ="#{index.title}"/>
+        </img>
+    </a>
 </div>
 <div id="viewpost">
     <div class = "posts">
